Fix CSS formatting and alignment properties

--- a/sequencia/ch.css
+++ b/sequencia/ch.css
@@ -24,3 +24,10 @@ h3{
 	margin: auto;
 	font-size: 35px;
 }
+button{
+    align-items: end;
+}
+img
+{
+	align-items: center;
+}
